<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_monitores"
            android:icon="@drawable/persona"
            android:title="@string/txt_monitor" />
        <item
            android:id="@+id/menu_crear_monitor"
            android:icon="@drawable/agregar_monitor"
            android:title="@string/txt_crear_monitor" />
        <item
            android:id="@+id/menu_crear_cita"
            android:icon="@drawable/agregar_cita"
            android:title="@string/txt_crear_cita" />
        <item
            android:id="@+id/menu_citas"
            android:icon="@drawable/citas"
            android:title="@string/txt_citas" />
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/txt_mas_opciones">
        <menu>
            <item
                android:id="@+id/menu_opcion_1"
                android:title="@string/txt_configuracion" />
            <item
                android:id="@+id/menu_opcion_2"
                android:title="@string/txt_salir" />
        </menu>
    </item>
</menu>