<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.angela.sara.Fragments.CrearCitasFragment">


            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="2"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">


                <TableRow>

                <TextView
                    android:id="@+id/datos_estudiante"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:maxLines="30"
                    android:text="@string/txt_datos_estudiante"
                    android:textSize="20dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/descripcion_de_detalle_personaje"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:maxLines="30"
                        android:text="@string/txt_nombre"
                        android:textSize="20dp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txtview_nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imagen"
                        android:textSize="20sp" />

                </TableRow>


                <TableRow>
                    <TextView
                        android:id="@+id/txt_contrasena"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:maxLines="30"
                        android:text="@string/txt_no_identificacion"
                        android:textSize="20dp" />

                </TableRow>


                <TableRow>
                    <TextView
                        android:id="@+id/txt_semestre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:maxLines="30"
                        android:text="@string/txt_semestre"
                        android:textSize="20dp" />

                    <Spinner
                        android:id="@+id/spinner_semestre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/semestre"
                        >
                    </Spinner>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/txt_linea_monitoria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:maxLines="30"
                        android:text="@string/txt_lineaMonitoria"
                        android:textSize="20dp" />

                    <Spinner
                        android:id="@+id/spinner_lista_monitores"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/lineas_monitoria"
                        >
                    </Spinner>

                </TableRow>
            </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="2"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">


        <TableRow>

            <TextView
                android:id="@+id/datos_monitor"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="30"
                android:text="@string/txt_datos_monitor"
                android:textSize="20dp" />
        </TableRow>



        <TableRow>
            <Spinner
                android:id="@+id/spinner_monitores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/semestre"
                >
            </Spinner>
        </TableRow>

        <TableRow>

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_agregar_cita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:text="@string/btn_agregar_cita"
        />
</LinearLayout>
