<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imagen_detalle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.67"
        android:contentDescription=""
        android:src="@drawable/ic_add_photo" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="2"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <TableRow>
                <TextView
                    android:id="@+id/descripcion_de_detalle_personaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:maxLines="30"
                    android:text="@string/txt_nombre"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/editText_nombre_monitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />

            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/txt_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:maxLines="30"
                    android:text="@string/txt_userName"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/editText_userName_monitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/txt_contrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:maxLines="30"
                    android:text="@string/txt_contrasena"
                    android:textSize="20dp" />
                <EditText
                    android:id="@+id/editText_contrasena_monitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/txt_telefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:maxLines="30"
                    android:text="@string/txt_telefono"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/editText_telefono_monitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    />
            </TableRow>


            <TableRow>
                <TextView
                    android:id="@+id/txt_semestre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:maxLines="30"
                    android:text="@string/txt_semestre"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/spinner_semestre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/semestre" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/txt_linea_monitoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:maxLines="30"
                    android:text="@string/txt_lineaMonitoria"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/spinner_linea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/lineas_monitoria" />
            </TableRow>


            <TableRow>
                <TextView
                    android:id="@+id/txt_lugar_asesoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:maxLines="30"
                    android:text="@string/txt_lugarAsesoria"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/editText_lugar_asesoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/txt_horario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:maxLines="30"
                    android:text="@string/txt_horarios"
                    android:textSize="20dp" />

                <ImageButton
                    android:id="@+id/button_horario_monitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/citas"/>
            </TableRow>

<LinearLayout
    android:gravity="center">
    <Button
        android:id="@+id/btn_agregar_monitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:text="@string/btn_agregar_monitor"
        android:background="@color/colorButton"/>

</LinearLayout>

        </TableLayout>


    </ScrollView>



</LinearLayout>
