<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_compartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/ic_action_name"/>


         <ImageView
            android:id="@+id/imagen_detalle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.58"
            android:contentDescription=""
            android:src="@drawable/persona" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_edit"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="2"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <TableRow>

                <TextView
                    android:id="@+id/descripcion_de_detalle_personaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:maxLines="30"
                    android:text="@string/txt_nombre"
                    android:textSize="@dimen/detalle_texto_descripción" />

                <TextView
                    android:id="@+id/txtview_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imagen"
                    android:text=""
                    android:textSize="20sp" />

            </TableRow>

            <TableRow>
            <TextView
                android:id="@+id/txt_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:maxLines="30"
                android:text="@string/txt_userName"
                android:textSize="20dp" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imagen"
                    android:text="Luis1234"
                    android:textSize="20sp" />
            </TableRow>


            <TableRow>
            <TextView
                android:id="@+id/txt_contrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:maxLines="30"
                android:text="@string/txt_contrasena"
                android:textSize="20dp" />

                <TextView
                    android:id="@+id/contrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imagen"
                    android:text="Luis1234asasasasasssa"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>
            <TextView
                android:id="@+id/txt_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:maxLines="30"
                android:text="@string/txt_telefono"
                android:textSize="20dp" />
             </TableRow>


            <TableRow>
                <TextView
                android:id="@+id/txt_semestre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:maxLines="30"
                android:text="@string/txt_semestre"
                android:textSize="20dp" />

            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/txt_horario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:maxLines="30"
                    android:text="@string/txt_horarios"
                    android:textSize="20dp" />

                <ImageButton
                    android:id="@+id/button_horatio_detalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/citas"/>

            </TableRow>


            <TableRow>
                <TextView
                    android:id="@+id/txt_linea_monitoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:maxLines="30"
                    android:text="@string/txt_lineaMonitoria"
                    android:textSize="20dp" />

            <TextView
                android:id="@+id/txtview_linea_monitoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:maxLines="30"
                android:text=""
                android:textSize="20dp" />
            </TableRow>


            <TableRow>
            <TextView
                android:id="@+id/txt_lugar_asesoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:maxLines="30"
                android:text="@string/txt_lugarAsesoria"
                android:textSize="20dp" />
            </TableRow>

        </TableLayout>





    </ScrollView>

</LinearLayout>
